--- a/src/components/auth/AuthView.css
+++ b/src/components/auth/AuthView.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    justify-content:center;
     height: 100vh;
     width: 100vw;
 }
 
 .title {
+    color: var(--green);
     margin: 0;
     padding: 0;
 }
@@ -14,4 +16,25 @@
 .subtitle {
     margin: 0;
     padding: 0;
+}
+
+.card__form {
+    display: flex;
+    flex-flow: column nowrap;
+    background-color: var(--cardBackground);
+    border-radius: var(--cardRadius);
+    filter: var(--cardDropShadow);
+}
+
+.form__btns {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.btns__li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
