--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 :root {
   /* Colors */
-  --cardBackground: #F6F6F6;
   --green: #02545B;
+  --cardBackground: #F6F6F6;
+  --formFieldGray: #E9E9E9;
 
   /* Border Radius */
   --cardRadius: 15px;
+  --formFieldRadius: 5px;
 
   /* Drop Shadow */
   --cardDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
+
+  /* Transitions */
+  --btnHover: 0.2s
 }
 
 * {
@@ -21,8 +26,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.btn {
+  background-color: transparent;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: var(--green);
+  width: max-content;
+  padding: .2em 1em;
+  cursor: pointer;
+  transition: var(--btnHover);
+}
+
+.btn:hover {
+  background-color: var(--green);
+  color: white;
+}
+
+/* Forms */
 fieldset {
   display: flex;
   flex-flow: column nowrap;
   border: none;
+}
+
+.fieldset__btn {
+  align-items: center;
+}
+
+input {
+  background-color: var(--formFieldGray);
+  border-style: none;
+  border-radius: var(--formFieldRadius)
 }
