--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,22 @@
 :root {
   /* Colors */
   --green: #02545B;
+  --greenActive: #01383d;
   --cardBackground: #F6F6F6;
   --formFieldGray: #E9E9E9;
 
+  /* Fonts */
+  --fontFamily: 'Heebo', sans-serif;
+  --weightThinnest: 100;
+  --weightThin: 300;
+  --weightNormal: 400;
+  --weightHeavy: 500;
+  --weightHeavier: 700;
+  --weightHeaviest: 900;
+
   /* Border Radius */
   --cardRadius: 15px;
-  --formFieldRadius: 5px;
+  --formFieldRadius: 0.5em;
 
   /* Drop Shadow */
   --cardDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
@@ -16,7 +26,8 @@
 }
 
 * {
-  color: #333333
+  color: #333333;
+  font-family: var(--fontFamily);
 }
 
 body {
@@ -24,6 +35,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-weight: var(--weightHeaviest)
 }
 
 .btn {
@@ -42,6 +57,11 @@ body {
   color: white;
 }
 
+.btn:active {
+  background-color: var(--greenActive);
+  border-color: var(--greenActive)
+}
+
 /* Forms */
 fieldset {
   display: flex;
@@ -53,8 +73,14 @@ fieldset {
   align-items: center;
 }
 
-input {
+label {
+  font-weight: var(--weightThin);
+}
+
+
+input, select{
   background-color: var(--formFieldGray);
   border-style: none;
-  border-radius: var(--formFieldRadius)
+  border-radius: var(--formFieldRadius);
+  padding: 0.5em;
 }
