spaced nav items

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,18 @@
 .header {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
     background-color: var(--green);
+}
+
+.header__nav {
+    flex-grow: 1;
 }
 
 .nav__list {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
 }
