able to select the current path and save it to state, but with major delay

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -29,3 +29,17 @@
     margin: 0;
     padding: 0;
 }
+
+.nav__btn {
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-weight: var(--weightThin);
+    font-size: 0.7em;
+    transition: var(--btnHover);
+}
+
+.nav__btn--active {
+    font-weight: var(--weightHeavier)
+}
