added styled underline, no animation

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    height: 2em;
     background-color: var(--green);
 }
 
@@ -18,15 +19,15 @@
 }
 
 .nav__centered {
-    display: flex;
-    flex-flow: row nowrap;
+    display: grid;
     margin-left: 1em;
 }
 
 .nav__item {
     color: white;
+    grid-row-start: 1;
     list-style: none;
-    margin: 0;
+    margin: 0 0.4em;
     padding: 0;
 }
 
@@ -37,9 +38,18 @@
     cursor: pointer;
     font-weight: var(--weightThin);
     font-size: 0.7em;
+    padding: 0;
     transition: var(--btnHover);
 }
 
 .nav__btn--active {
     font-weight: var(--weightHeavier)
+}
+
+.nav__line {
+    grid-row-start: 2;
+    border-bottom-style: solid;
+    border-bottom-width: 0.25em;
+    border-radius: 5em;
+    border-color: white;
 }
