--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,6 +6,12 @@
     background-color: var(--green);
 }
 
+.header__branding {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
 .header__nav {
     flex-grow: 1;
 }
