--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,11 @@
 footer {
+    font-size: 0.75em;
+    display: flex;
+    flex-flow: column nowrap;
     background-color: var(--lightGreen)
+}
+
+.footer__row1 {
+    display: flex;
+    flex-flow: row nowrap;
 }
