--- a/src/components/branding/WriteLogLogo.css
+++ b/src/components/branding/WriteLogLogo.css
@@ -1,13 +1,18 @@
+.logo__login {
+    width: 10em;
+    height: 8em;
+    margin: 0.8em 0;
+}
+
 .logo__header {
     width: 1.7em;
     height: 1.7em;
     margin-left: 0.2em;
 }
 
-.logo__login {
-    width: 10em;
-    height: 8em;
-    margin: 0.8em 0;
+.logo__footer {
+    width: 1.7em;
+    height: 1.7em;
 }
 
 .logo__white {
