--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     flex-flow: row nowrap;
+    flex-shrink: 0;
     justify-content: space-between;
     height: 2em;
     background-color: var(--green);
