added headings to each section

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,16 @@ h1 {
   font-weight: var(--weightHeaviest)
 }
 
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
 .btn {
   background-color: transparent;
   border-style: solid;
