--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,12 +5,20 @@ footer {
     background-color: var(--lightGreen)
 }
 
+.footer__heading {
+    font-size: 1em;
+    font-weight: var(--weightHeavier);
+}
+
 .footer__row1 {
     display: flex;
     flex-flow: row nowrap;
 }
 
 .footer__branding, .footer__about, .footer__tech {
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 0.5em 1em;
     width: 33.33%;
 }
 
@@ -18,12 +26,10 @@ footer {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    margin: 1em 0 0 0;
 }
 
 .branding__summary, .about__p {
     font-size: 0.9em;
-    margin: 0.5em 1em;
     font-weight: var(--weightThin);
 }
 
@@ -37,4 +43,9 @@ footer {
     font-size: 0.9em;
     margin: 0.5em 1em;
     font-weight: var(--weightThin);
+}
+
+.tech__list {
+    margin: 0;
+    padding: 0;
 }
