--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -13,13 +13,14 @@ footer {
 .footer__row1 {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
 }
 
 .footer__branding, .footer__about, .footer__tech {
     display: flex;
     flex-flow: column nowrap;
     margin: 0.5em 1em;
-    width: 33.33%;
+    width: 25%;
 }
 
 .branding__row1 {
