--- a/src/components/auth/AuthView.css
+++ b/src/components/auth/AuthView.css
@@ -20,7 +20,7 @@
 }
 
 .card {
-    background-color: var(--cardBackground);
+    background-color: var(--offWhite);
     border-radius: var(--cardRadius);
     filter: var(--cardDropShadow);
 }
