--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
   /* Colors */
+  --grey: #F6F6F6;
+  --offWhite: #FCFCFC;
   --green: #02545B;
   --lightGreen: #0058600f;
   --greenActive: #01383d;
@@ -7,7 +9,6 @@
   --lightPurple: #786384;
   --orange: #F0CB72;
   --lightOrange: #F0CB72;
-  --cardBackground: #F6F6F6;
   --formFieldGray: #E9E9E9;
 
   /* Fonts */
@@ -25,6 +26,7 @@
 
   /* Drop Shadow */
   --cardDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
+  --headingDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
 
   /* Transitions */
   --btnHover: 0.2s
@@ -45,6 +47,7 @@
 body {
   font-size: 1.3em;
   margin: 0;
+  background-color: var(--grey);
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
