--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -37,7 +37,7 @@ footer {
 .tech__list {
     display: grid;
     grid-auto-flow: dense;
-    grid-template-columns: min-content min-content min-content;
+    grid-template-columns: auto auto auto;
     margin: 0;
     padding: 0;
 }
