added placeholder view heading

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,8 @@
     justify-content: space-between;
     height: 2em;
     background-color: var(--green);
+    filter: var(--headingDropShadow);
+    z-index: 2;
 }
 
 .header__branding {
