--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
   /* Drop Shadow */
   --cardDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
-  --headingDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
+  --headingDropShadow: drop-shadow(0px 3px 2px lightgrey);
 
   /* Transitions */
   --btnHover: 0.2s
