--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --orange: #F0CB72;
   --lightOrange: #F0CB72;
   --formFieldGray: #E9E9E9;
+  --shadowGrey: #e9e9e9;
 
   /* Fonts */
   --fontFamily: 'Heebo', sans-serif;
@@ -25,8 +26,9 @@
   --formFieldRadius: 0.5em;
 
   /* Drop Shadow */
-  --cardDropShadow: drop-shadow(-5px 5px 3px #e9e9e9);
-  --headingDropShadow: drop-shadow(0px 3px 2px lightgrey);
+  --cardDropShadow: drop-shadow(-5px 5px 3px var(--shadowGrey));
+  --headingDropShadow: drop-shadow(0px 2px 2px var(--shadowGrey));
+  --footerDropShadow: drop-shadow(0px -2px 2px var(--shadowGrey));
 
   /* Transitions */
   --btnHover: 0.2s
