--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,6 +4,7 @@ footer {
     font-size: 0.75em;
     background-color: var(--offWhite);
     filter: var(--footerDropShadow);
+    z-index: 2;
 }
 
 .footer__row1 {
