--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -8,6 +8,8 @@
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.1);
+    pointer-events: none;
+    opacity: 0;
     z-index: 3;
 }
 
@@ -19,4 +21,8 @@
     max-width: 100%;
     filter: --var(cardDropShadow);
     overflow:scroll;
+}
+
+.modal__active {
+    opacity: 100;
 }
