--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -30,15 +30,25 @@ footer {
     font-weight: var(--weightHeavier);
 }
 
+.footer__subHeading {
+    font-size: 0.8em;
+    font-weight: var(--weightHeavy);
+}
+
 .summary__p, .about__p {
     font-size: 0.9em;
     font-weight: var(--weightThin);
 }
 
+.footer__lists {
+    display: flex;
+}
+
+.footer__list {
+    margin: 0 0 0 1em;
+}
+
 .tech__list {
-    display: grid;
-    grid-auto-flow: dense;
-    grid-template-columns: auto auto auto;
     margin: 0;
     padding: 0;
 }
