--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     height: 2em;
     background-color: var(--green);
-    filter: var(--headingDropShadow);
+    box-shadow: var(--headingDropShadow);
     z-index: 2;
 }
 
