--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@
   --formFieldRadius: 0.5em;
 
   /* Drop Shadow */
-  --cardDropShadow: drop-shadow(-5px 5px 3px var(--shadowGrey));
-  --headingDropShadow: drop-shadow(0px 2px 2px var(--shadowGrey));
-  --footerDropShadow: drop-shadow(0px -2px 2px var(--shadowGrey));
+  --cardDropShadow: -0.1em 0.1em 0.3em var(--shadowGrey);
+  --headingDropShadow: 0em 0.1em 0.3em var(--shadowGrey);
+  --footerDropShadow: 0em -0.1em 0.3em var(--shadowGrey);
 
   /* Transitions */
   --btnHover: 0.2s
@@ -113,4 +113,9 @@ input, select{
   border-radius: var(--formFieldRadius);
   padding: 0.5em;
   font-size: 0.7em;
+}
+
+.input__radio {
+  margin: 0 0.2em 0 0.7em;
+  padding: 0;
 }
