--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@ body {
   font-size: 1.3em;
   margin: 0;
   background-color: var(--grey);
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 h1 {
@@ -95,6 +94,8 @@ fieldset {
   display: flex;
   flex-flow: column nowrap;
   border: none;
+  margin: 0.7em;
+  padding: 0;
 }
 
 .fieldset__btn {
@@ -113,6 +114,7 @@ input, select{
   border-radius: var(--formFieldRadius);
   padding: 0.5em;
   font-size: 0.7em;
+  width: min-content;
 }
 
 .input__radio {
