--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --orange: #F0CB72;
   --lightOrange: #F0CB72;
   --formFieldGray: #E9E9E9;
-  --shadowGrey: #e9e9e9;
+  --shadowGrey: #00000005;
 
   /* Fonts */
   --fontFamily: 'Heebo', sans-serif;
