--- a/src/components/projects/ProjectForm.css
+++ b/src/components/projects/ProjectForm.css
@@ -44,10 +44,18 @@
     justify-content: center;
 }
 
-.day__placeholder--active::-webkit-input-placeholder, .day__placeholder--active:-moz-placeholder, .day__placeholder--active::-moz-placeholder {
+.day__placeholder--active::-moz-placeholder {
     color:var(--fontColor);
 }
 
-.day__placeholder--inactive::-webkit-input-placeholder, .day__placeholder--inactive:-moz-placeholder, .day__placeholder--inactive::-moz-placeholder {
+.day__placeholder--active::-webkit-input-placeholder {
+    color:var(--fontColor);
+}
+
+.day__placeholder--inactive::-webkit-input-placeholder {
+    color:lightgrey;
+}
+
+.day__placeholder--inactive::-moz-placeholder {
     color:lightgrey;
 }
