--- a/src/components/projects/ProjectForm.css
+++ b/src/components/projects/ProjectForm.css
@@ -52,10 +52,19 @@
     color:var(--fontColor);
 }
 
+.day__placeholder--active {
+    background-color: var(--formFieldGray);
+}
+
 .day__placeholder--inactive::-webkit-input-placeholder {
     color:lightgrey;
 }
 
 .day__placeholder--inactive::-moz-placeholder {
     color:lightgrey;
+
+}
+
+.day__placeholder--inactive {
+    background-color: whitesmoke;
 }
