--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
     flex-shrink: 0;
     justify-content: space-between;
     height: 2em;
@@ -33,6 +34,8 @@
 }
 
 .nav__item {
+    display: flex;
+    align-items: center;
     color: white;
     grid-row-start: 1;
     list-style: none;
@@ -57,8 +60,14 @@
 
 .nav__line {
     grid-row-start: 2;
+    align-self: self-start;
     border-bottom-style: solid;
     border-bottom-width: 0.25em;
     border-radius: 5em;
     border-color: white;
+}
+
+.btn__logout {
+    display: flex;
+    align-items: center;
 }
