--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -1,12 +1,44 @@
 .card__project {
+    display: grid;
     margin: 1em;
+    padding: 0.5em;
 }
 
 .project__h2--card {
     font-size: 1em;
+    grid-column: 2;
+    grid-row: 1;
 }
 
 .project__subtitle {
     font-size: 0.6em;
     font-weight: var(--weightHeavy);
+}
+
+.project__subtitle--type {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.project__subtitle--date {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.project__arrow {
+    grid-column: 1;
+    grid-row: 2 / span 2;
+    margin-right: 1em;
+}
+
+.project__dots {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: 0.5em;
+}
+
+.project__dash {
+    grid-column: 2;
+    grid-row: 4;
+    margin-top: 1em;
 }
