--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   /* Colors */
   --fontColor: #333333;
   --grey: #F6F6F6;
+  --darkGrey: #ACACAC;
   --offWhite: #FCFCFC;
   --green: #02545B;
   --lightGreen: #0058600f;
