--- a/src/components/icons/Icons.css
+++ b/src/components/icons/Icons.css
@@ -1,3 +1,13 @@
+.icon__gray {
+    fill: var(--darkGrey)
+}
+
+.icon__plus {
+    height: 1em;
+    width: 1em;
+    margin: 0.3em 0.4em;
+}
+
 .icon__logout {
     height: 1.5em;
 }
