--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -4,6 +4,16 @@
     padding: 0.5em;
 }
 
+.card__btn {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    flex-flow: row nowrap;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+
 .project__h2--card {
     font-size: 1em;
     grid-column: 2;
