tweaked layout and added flex wrapping

--- a/src/components/WriteLog.css
+++ b/src/components/WriteLog.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-flow: row nowrap;
     background-color: var(--offWhite);
-    box-shadow: var(--headingDropShadow)
+    box-shadow: var(--headingDropShadow);
+    height: 3em;
 }
