--- a/src/components/icons/Icons.css
+++ b/src/components/icons/Icons.css
@@ -2,6 +2,10 @@
     fill: var(--darkGrey)
 }
 
+.icon__lightGray {
+    fill: var(--formFieldGray)
+}
+
 .icon__plus {
     height: 1em;
     width: 1em;
@@ -23,4 +27,8 @@
 
 .icon__logout {
     height: 1.5em;
+}
+
+.icon__divider {
+    margin: 0 1em;
 }
