--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -63,6 +63,7 @@
     margin-left: 2em;
     margin-right: 0.5em;
     align-items: center;
+    z-index: 1;
 }
 
 .dot__btns {
@@ -77,6 +78,17 @@
     border: none;
     cursor: pointer;
     font-weight: var(--weightThin);
+    transition: var(--btnHover);
+}
+
+.dot__btn:hover {
+    border-radius: 2em;
+    background-color: var(--lightGreen);
+    box-shadow: var(--cardDropShadow);
+}
+
+.dot__btn:active {
+    background-color: var(--lightGreen);
 }
 
 .project__dash {
