--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -66,7 +66,12 @@
     z-index: 1;
 }
 
-.dot__btns {
+.dot__btns--inactive {
+    display: none;
+}
+
+.dot__btns--active {
+    display: inline-block;
     position: absolute;
     background-color: var(--formFieldGray);
     border-radius: var(--formFieldRadius);
