--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -23,10 +23,17 @@
     background-color: var(--offWhite);
     padding: 1em;
     border-radius: var(--cardRadius);
-    width: 20em;
     max-width: 100%;
     overflow-y: auto;
     z-index: 4;
+}
+
+.modal__width--wide {
+    width: 20em;
+}
+
+.modal__width--small {
+    width: 10em;
 }
 
 .modal__heading {
