--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -10,7 +10,7 @@
     background-color: rgba(0, 0, 0, 0.1);
     pointer-events: none;
     opacity: 0;
-    z-index: 3;
+    z-index: 5;
     transition: 0.2s;
 }
 
@@ -25,7 +25,7 @@
     border-radius: var(--cardRadius);
     max-width: 100%;
     overflow-y: auto;
-    z-index: 4;
+    z-index: 6;
 }
 
 .modal__width--wide {
@@ -49,5 +49,11 @@
 
 .modal__content {
     display: flex;
+    flex-flow: column nowrap;
     justify-content: center;
+    align-items:center;
+}
+
+.modal__warning {
+    color: var(--red);
 }
