--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --green: #02545B;
   --lightGreen: #0058600f;
   --greenActive: #01383d;
+  --red: #d85656;
   --purple: #62496F;
   --lightPurple: #786384;
   --orange: #F0CB72;
