--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,6 @@ p {
   background-color: transparent;
   border-style: solid;
   border-radius: var(--formFieldRadius);
-  border-color: var(--green);
   border-width: 0.2em;
   width: max-content;
   padding: .2em 1em;
@@ -82,14 +81,28 @@ p {
   transition: .1s;
 }
 
-.btn:hover {
+.btn--green {
+  border-color: var(--green);
+}
+
+.btn--green:hover {
   background-color: var(--green);
+  font-weight:var(--weightHeavy);
   color: white;
 }
 
-.btn:active {
+.btn--green:active {
   background-color: var(--greenActive);
-  border-color: var(--greenActive)
+  border-color: var(--greenActive);
+}
+
+.btn--orange {
+  border-color: var(--orange);
+}
+
+.btn--orange:hover {
+  background-color: var(--orange);
+  font-weight:var(--weightHeaviest);
 }
 
 /* Forms */
