fixed 3-dot menu close handling

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@
 
 /* Setup page layout */
 
-.root__container {
+#root {
   display: grid;
   grid-template-rows: min-content min-content auto min-content;
   height: 100vh;
