--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --fontColor: #333333;
   --grey: #F6F6F6;
   --darkGrey: #ACACAC;
+  --lightGrey: #f1f1f1; 
   --offWhite: #FCFCFC;
   --green: #02545B;
   --lightGreen: #0058600f;
