--- a/src/components/progress/ProgressCard.css
+++ b/src/components/progress/ProgressCard.css
@@ -1,13 +1,16 @@
 .card__progress {
-    grid-row: 6;
-    grid-column: 1 / span 3;
     display: flex;
     flex-flow: column nowrap;
+    grid-row: 6;
+    grid-column: 1 / span 3;
     align-items: center;
+    padding: 0.5em;
+    margin-top: 0.4em;
 }
 
 .progress__content {
     width: 100%;
+    margin-bottom: 0.4em;
 }
 
 .progress_h3 {
