completed basic structure for progress card

--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,31 +1,40 @@
+.form__h3 {
+  font-size: 1em;
+}
+
+.form__h4 {
+  font-size: 0.8em;
+  margin: 1.3em 0 0.1em;
+}
+
 fieldset {
-    display: flex;
-    flex-flow: column nowrap;
-    border: none;
-    margin: 0.7em;
-    padding: 0;
-  }
-  
-  .fieldset__btn {
-    display: grid;
-    justify-content: center;
-  }
-  
-  label {
-    font-size: 0.75em;
-    font-weight: var(--weightThin);
-  }
-  
-  input, select{
-    background-color: var(--formFieldGray);
-    border-style: none;
-    border-radius: var(--formFieldRadius);
-    padding: 0.5em;
-    font-size: 0.7em;
-    width: min-content;
-  }
-  
-  .input__radio {
-    margin: 0 0.2em 0 0.7em;
-    padding: 0;
-  }
+  display: flex;
+  flex-flow: column nowrap;
+  border: none;
+  margin: 0.7em;
+  padding: 0;
+}
+
+.fieldset__btn {
+  display: grid;
+  justify-content: center;
+}
+
+label {
+  font-size: 0.75em;
+  font-weight: var(--weightThin);
+}
+
+input, select{
+  background-color: var(--formFieldGray);
+  border-style: none;
+  border-radius: var(--formFieldRadius);
+  padding: 0.5em;
+  font-size: 0.7em;
+  width: min-content;
+}
+
+.input__radio {
+  margin: 0 0.2em 0 0.7em;
+  padding: 0;
+}
