--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,6 +7,6 @@
     background-color: var(--offWhite);
 }
 
-.card__color--orange {
-    background-color: var(--orange);
+.card__color--mintBlue {
+    background-color: var(--mintBlue);
 }
