--- a/src/components/icons/Icons.css
+++ b/src/components/icons/Icons.css
@@ -1,9 +1,9 @@
 .icon__gray {
-    fill: var(--darkGrey)
+    fill: var(--darkGray)
 }
 
 .icon__lightGray {
-    fill: var(--formFieldGray)
+    fill: var(--mediumGray)
 }
 
 .icon__plus {
@@ -29,9 +29,9 @@
     height: 1.5em;
 }
 
-.icon__close {
+/* .icon__close {
     
-}
+} */
 
 .icon__divider {
     margin: 0 1em;
