new logo on auth and header styled correctly

--- a/src/components/branding/VisLitLogo.css
+++ b/src/components/branding/VisLitLogo.css
@@ -17,8 +17,15 @@
 
 .logo__color--darkMintBlue {
     stroke: var(--darkMintBlue);
+    fill: white;
 }
 
-.logo__color--lightBLack {
-    stroke: var(--lightBlack)
+.logo__color--lightBlack {
+    stroke: var(--lightBlack);
+    fill: white;
+}
+
+.logo__color--white {
+    stroke: white;
+    fill: black;
 }
