--- a/src/components/branding/VisLitLogo.css
+++ b/src/components/branding/VisLitLogo.css
@@ -1,27 +1,3 @@
-#line__v {
-    stroke-dasharray: 60;
-    stroke-dashoffset: 75;
-    animation: line__v 1s forwards;
-}
-
-#line__l {
-    stroke-dasharray: 60;
-    stroke-dashoffset: -50;
-    animation: line__l 1s 1s forwards;
-}
-
-@keyframes line__v {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-@keyframes line__l {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
 .logo__login {
     width: 10em;
     height: 8em;
@@ -41,15 +17,77 @@
 
 .logo__color--darkMintBlue {
     stroke: var(--darkMintBlue);
-    fill: white;
+    fill: var(--lightGray);
 }
 
 .logo__color--lightBlack {
     stroke: var(--lightBlack);
-    fill: white;
+    fill: var(--lightGray);
 }
 
 .logo__color--white {
     stroke: white;
     fill: black;
 }
+
+#line__v {
+    stroke-dasharray: 70;
+    stroke-dashoffset: 75;
+    animation: line__v 1s forwards;
+}
+
+#line__l {
+    stroke-dasharray: 60;
+    stroke-dashoffset: -50;
+    animation: line__l 1s 0.5s forwards;
+}
+
+#dot__v {
+    stroke-opacity: 0%;
+    animation: dot__v  0.1s 0.5s forwards
+}
+
+#dot__l {
+    stroke-opacity: 0%;
+    animation: dot__l 0.1s 1.1s forwards
+}
+
+@keyframes line__v {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
+@keyframes line__l {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
+@keyframes dot__v {
+    0% {
+        stroke-opacity: 0%;
+    }
+
+    50% {
+        stroke-opacity: 50%
+    }
+
+    100% {
+        stroke-opacity: 100%
+    }
+}
+
+@keyframes dot__l {
+    0% {
+        stroke-opacity: 0%;
+    }
+
+    50% {
+        stroke-opacity: 50%
+    }
+
+    100% {
+        stroke-opacity: 100%
+    }
+} 
