--- a/src/components/branding/VisLitLogo.css
+++ b/src/components/branding/VisLitLogo.css
@@ -7,12 +7,13 @@
 .logo__header {
     width: 1.7em;
     height: 1.7em;
-    margin-left: 0.2em;
+    margin-left: 0.7em;
 }
 
 .logo__footer {
-    width: 1.7em;
-    height: 1.7em;
+    width: 2em;
+    height: 2em;
+    margin-bottom: 0.5em;
 }
 
 .logo__color--darkMintBlue {
