added background svgs

--- a/src/components/auth/AuthView.css
+++ b/src/components/auth/AuthView.css
@@ -102,3 +102,21 @@
 .auth__warning {
     margin-bottom: 0.8em;
 }
+
+/* BACKGROUND */
+
+.bg__blob--lightBlack {
+
+}
+
+.bg__blob--mintBlue {
+
+}
+
+.bg__line--lightBlack {
+
+}
+
+.bg__line--lightBlack {
+    
+}
