--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -5,9 +5,9 @@
 
 .card__project {
     display: grid;
-    margin: 1em;
-    padding: 0.5em;
+    margin: 0.8em;
     flex-basis: 15em;
+    height:min-content;
 }
 
 .card__btn {
@@ -45,11 +45,12 @@
     grid-column: 1;
     grid-row: 3 / 4;
     margin-right: 1em;
+    margin-left: 1em;
     align-self: center;
 }
 
 .project__dash {
     grid-column: 2;
     grid-row: 5;
-    margin-top: 1em;
+    margin: 1em 0;
 }
