--- a/src/components/progress/ProgressCard.css
+++ b/src/components/progress/ProgressCard.css
@@ -1,12 +1,8 @@
-.card__progress--inactive {
-    display: none
-}
-
-.card__progress--active {
+.card__progress {
     display: flex;
     flex-flow: column nowrap;
     grid-row: 6;
-    grid-column: 1 / span 3;
+    grid-column: 1 / 3;
     align-items: center;
     padding: 0.5em;
     margin-top: 0.4em;
