--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -22,35 +22,31 @@
 
 .project__h2--card {
     font-size: 1em;
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 2;
+    margin-left: 15px;
 }
 
 .project__subtitle {
     font-size: 0.6em;
     font-weight: var(--weightHeavy);
+    margin-left: 15px;
 }
 
 .project__subtitle--type {
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 3;
+    margin-left: 15px;
 }
 
 .project__subtitle--date {
-    grid-column: 2;
-    grid-row: 4;
-}
-
-.project__arrow {
     grid-column: 1;
-    grid-row: 3 / 4;
-    margin-right: 1em;
-    margin-left: 1em;
-    align-self: center;
+    grid-row: 4;
+    margin-left: 15px;
 }
 
 .project__dash {
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 5;
-    margin: 1em 0;
+    margin: 0.5em 0 0 15px;
 }
