--- a/src/components/projects/ProjectDotMenu.css
+++ b/src/components/projects/ProjectDotMenu.css
@@ -1,13 +1,13 @@
 .dot__menu {
     display: inline-block;
     position: relative;
-    grid-column: 3;
+    grid-column: 2;
     grid-row: 1;
     margin-left: 1em;
     margin-right: 0.5em;
     margin-top: 0.5em;
     justify-self: end;
-    align-items: center;
+    align-self: start;
 }
 
 .dot__btns--inactive {
