--- a/src/components/progress/ProgressCard.css
+++ b/src/components/progress/ProgressCard.css
@@ -4,7 +4,7 @@
     grid-row: 6;
     grid-column: 1 / 3;
     align-items: center;
-    padding: 0.5em;
+    padding: 5px 0 10px 15px;
     margin-top: 0.4em;
 }
 
