--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,3 +1,14 @@
+.card__dash {
+    margin: 0.8em;
+    padding: 0.5em 1em;
+    width: max-content;
+    height: min-content;
+}
+
 .dash__title {
-    
+    font-size: 1.3em;
+}
+
+.dash__h3 {
+    font-size: 1em;
 }
